2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5019: htmlARea RTE hangs while editing link in Firefox
	* Updated htmlArea RTE version to 1.7.7 for TYPO3 4.2.3

2008-10-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9553: Form validation script jsfunc.validateform.js sometimes fails in IE (thanks to Vladimir Podkovanov)
	* Fixed bug #9608: Frontend Editing does not work anymore

2008-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual

2008-10-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #9535: Folder icons in filelist file tree don't get skinned anymore (patch by Francois Suter)
	* Fixed bug #9497: Edit in Rich Text Editor - Button does not work anymore in Web>Page (patch by Oliver Hader)

2008-10-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9480: Bug/cleanup: Enhance debug information with SQL data

2008-10-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9498: Bug: EM "Check for extension updates" always warns about changes

2008-10-14  Martin Kutschker  <masi@typo3.org>

	* #9501: Titles of content columns in classic page module doesn't take into account backend charset (thanx to Steffen Kamper and Vladimir Podkovanov)

2008-10-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9523: class.t3lib_htmlmail.php produces null headers in HTML messages

2008-10-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9522: t3lib_BEfunc::BEenableFields generates invalid SQL
	* Fixed bug #9469: Failed to load magic database

2008-10-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9516: htmlARea RTE: Move link tags to head

2008-10-06  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.2

2008-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9490: htmlArea RTE: Opera 9.52 sometimes refuses to insert a node

2008-10-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #9472: htmlArea RTE: Safari may crash when the RTE closes