@@ -187,6 +187,7 @@ class template {
 	var $form_rowsToStylewidth = 9.58;	// Multiplication factor for formWidth() input size (default is 48* this value).
 	var $form_largeComp = 1.33;		// Compensation for large documents (used in class.t3lib_tceforms.php)
 	var $endJS=1;					// If set, then a JavaScript section will be outputted in the bottom of page which will try and update the top.busy session expiry object.
+	var $additionalHeaderData=array();	// Additional data to include in head section
 
 		// TYPO3 Colorscheme.
 		// If you want to change this, please do so through a skin using the global var $TBE_STYLES
@@ -675,6 +676,7 @@ class template {
 	'.$generator.'
 	<title>'.htmlspecialchars($title).'</title>
 	'.$this->docStyle().'
+	'.implode("\n", $this->additionalHeaderData).'
 	'.implode("\n", $this->JScodeLibArray).'
 	'.$this->JScode.'
 	'.$tabJScode.'
