@@ -2,6 +2,7 @@
 
 	* Fixed bug #5019: htmlARea RTE hangs while editing link in Firefox
 	* Updated htmlArea RTE version to 1.7.7 for TYPO3 4.2.3
+	* Fixed bug #9613: RTE uses JScodeLibArray to insert CSS
 
 2008-10-21  Oliver Hader  <oliver@typo3.org>
 
